Fix navbar z-index

--- a/assets/main.css
+++ b/assets/main.css
@@ -88,7 +88,7 @@ body {
     background: none;
     display: flex;
     width: 100vw;
-    z-index: 0;
+    z-index: 1;
   }
   #navbar ul {
     height: 100vh;
